Closed
Bug 338568
Opened 19 years ago
Closed 19 years ago
Arrows in SVG image change their position depending on window size
Categories
(Core :: SVG, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: mcsmurf, Assigned: tor)
References
()
Details
Attachments
(2 files)
|
497 bytes,
image/svg+xml
|
Details | |
|
3.13 KB,
patch
|
roc
:
review+
roc
:
superreview+
|
Details | Diff | Splinter Review |
To reproduce:
1. Fetch a trunk build
2. Go to URL
3. Resize your window
Observe how the arrows move depending on your window size.
This bug was not present in SeaMonkey 1.0.1.
Some interaction between <a> and the fallback for when we can't execute a filter due to an unimplemented filter element or other error.
Attachment #222658 -
Flags: superreview+
Attachment #222658 -
Flags: review?(roc)
Attachment #222658 -
Flags: review+
Checked in.
Status: ASSIGNED → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•