Bug 338568 - filter failure fallback not working with <a> content.  r+sr=roc